fix(style): minor dark mode changes to apps-switcher-menu

--- a/frappe/public/scss/desk/sidebar.scss
+++ b/frappe/public/scss/desk/sidebar.scss
@@ -3,11 +3,15 @@
 	--sidebar-hover-color: #f3f3f3;
 	--sidebar-active-color: rgba(255, 255, 255, 1);
 	--sidebar-border-color: #ededed;
+	--surface-modal: rgba(255, 255, 255, 1);
+	--divider-color: rgba(237, 237, 237, 1);
 }
 [data-theme="dark"] {
 	--sidebar-hover-color: rgba(43, 43, 43, 1);
 	--sidebar-active-color: rgba(66, 66, 66, 1);
 	--sidebar-border-color: #232323;
+	--surface-modal: rgb(0, 0, 0);
+	--divider-color: rgba(52, 52, 52, 1);
 }
 .underline-hover {
 	display: initial;
@@ -125,7 +129,7 @@ body {
 
 	.divider {
 		margin: var(--margin-xs) 0;
-		border-top: 1px solid var(--border-color);
+		border-top: 1px solid var(--divider-color);
 	}
 
 	.standard-sidebar-section {
@@ -348,10 +352,10 @@ body {
 	position: absolute;
 	top: 44px;
 	left: 7px;
-	width: 220px; /* 200 - 7px */
+	width: 205px;
 	padding: 6px;
 	border-radius: var(--border-radius-lg);
-	background: var(--surface-modal, rgba(255, 255, 255, 1));
+	background: var(--surface-modal);
 	box-shadow: 0px 10px 24px -3px rgba(0, 0, 0, 0.1);
 	// box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.05);
 	// box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2);
@@ -363,7 +367,7 @@ body {
 	border-radius: var(--border-radius-tiny);
 	opacity: 0px;
 	&:hover {
-		background-color: var(--subtle-accent);
+		background-color: var(--sidebar-hover-color);
 	}
 
 	a {
